--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,9 +2,9 @@ name: IEEE ENSAF Project CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
