--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+#dependencies
 /node_modules
-/.pnp
-.pnp.js
-ieee-ensaf-project.pem
-.dockerfile
-# testing
+/.png
+Dockerfile
+
+#testing 
 /coverage
 
-# production
+#production
 /build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.eslintcache
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.env
