--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,7 +15,7 @@ jobs:
     
   build: 
     env: 
-      CI: true  #the create react app test script will know that we are runing in ci env then will disable watch mode
+     # CI: true  #the create react app test script will know that we are runing in ci env then will disable watch mode
       #PORT: 9800 # we can add port... 
       DATABASE: mongodb://localhost/ieeeEnsaf
     strategy: #to run our jobs in differnet envir
